--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BookLibraryApp.styles.css" asp-append-version="true" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
     <header>
@@ -34,16 +36,19 @@
 
                         @* Admin/Staff Links: You might want to wrap these in an authorization check later (e.g., if (User.IsInRole("Admin"))), but for now, we'll keep them visible *@
                         @if (SignInManager.IsSignedIn(User))
-                        {
-                            <li class="nav-item ">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Patron" asp-action="Index">Patrons</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Loan" asp-action="Index">Loans</a>
-                            </li>
+                            if (User.IsInRole("Admin"))
+                            {
+                                {
+                                    <li class="nav-item ">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Patron" asp-action="Index">Patrons</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Loan" asp-action="Index">Loans</a>
+                                    </li>
+                                }
                         }
 
                     </ul>
@@ -76,7 +81,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="">
             @RenderBody()
         </main>
     </div>
