--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             </p>
             <div class="hero-buttons">
                 @* Button for Patrons to view the collection *@
-                <a asp-controller="Books" asp-action="Index" class="btn btn-primary">
+                <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-primary">
                     Start Reading Now <i class="fas fa-book-reader" style="margin-left: 5px;"></i>
                 </a>
 
