--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -3,42 +3,44 @@
 @{
     ViewData["Title"] = "Add New Book";
 }
+<div class="container-md" style="padding: 50px;">
 
-<h1>Add New Book</h1>
+    <h1>Add New Book</h1>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        @* {{-- The form posts to the HTTP POST Create action --}} *@
-        <form asp-action="Create">
-            @* {{-- Validation summary displays non-field-specific errors --}} *@
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            @* {{-- The form posts to the HTTP POST Create action --}} *@
+            <form asp-action="Create">
+                @* {{-- Validation summary displays non-field-specific errors --}} *@
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            @* {{-- Title Field --}} *@
-            <div class="form-group mb-3">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
+                @* {{-- Title Field --}} *@
+                <div class="form-group mb-3">
+                    <label asp-for="Title" class="control-label"></label>
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
 
-            @* {{-- Author Name Field --}} *@
-            <div class="form-group mb-3">
-                <label asp-for="AuthorName" class="control-label"></label>
-                <input asp-for="AuthorName" class="form-control" />
-                <span asp-validation-for="AuthorName" class="text-danger"></span>
-            </div>
+                @* {{-- Author Name Field --}} *@
+                <div class="form-group mb-3">
+                    <label asp-for="AuthorName" class="control-label"></label>
+                    <input asp-for="AuthorName" class="form-control" />
+                    <span asp-validation-for="AuthorName" class="text-danger"></span>
+                </div>
 
-            <div class="form-group mt-3">
-                <input type="submit" value="Create" class="btn btn-success" />
-                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-            </div>
-        </form>
+                <div class="form-group mt-3">
+                    <input type="submit" value="Create" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-@section Scripts {
-        @* {{-- Renders client-side validation scripts --}} *@
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    @section Scripts {
+            @* {{-- Renders client-side validation scripts --}} *@
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
     }
-}
+</div>
