--- a/Views/Book/Edit.cshtml
+++ b/Views/Book/Edit.cshtml
@@ -4,37 +4,39 @@
     ViewData["Title"] = "Edit Book";
 }
 
-<h1>Edit Book</h1>
+<div class="container-md" style="padding: 50px;">
+    <h1>Edit Book</h1>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        @* {{-- The form posts to the HTTP POST Edit action --}} *@
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            @* {{-- The form posts to the HTTP POST Edit action --}} *@
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            @* {{-- IMPORTANT: Hidden field to pass the BookId back to the controller --}} *@
-            <input type="hidden" asp-for="BookId" />
+                @* {{-- IMPORTANT: Hidden field to pass the BookId back to the controller --}} *@
+                <input type="hidden" asp-for="BookId" />
 
-            @* {{-- Title Field (pre-populated) --}} *@
-            <div class="form-group mb-3">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
+                @* {{-- Title Field (pre-populated) --}} *@
+                <div class="form-group mb-3">
+                    <label asp-for="Title" class="control-label"></label>
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
 
-            @* {{-- Author Name Field (pre-populated) --}} *@
-            <div class="form-group mb-3">
-                <label asp-for="AuthorName" class="control-label"></label>
-                <input asp-for="AuthorName" class="form-control" />
-                <span asp-validation-for="AuthorName" class="text-danger"></span>
-            </div>
+                @* {{-- Author Name Field (pre-populated) --}} *@
+                <div class="form-group mb-3">
+                    <label asp-for="AuthorName" class="control-label"></label>
+                    <input asp-for="AuthorName" class="form-control" />
+                    <span asp-validation-for="AuthorName" class="text-danger"></span>
+                </div>
 
-            <div class="form-group mt-3">
-                <input type="submit" value="Save" class="btn btn-success" />
-                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-            </div>
-        </form>
+                <div class="form-group mt-3">
+                    <input type="submit" value="Save" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
